tests/errors/pp-unsolved-defined-1.h
#if 1 && defined foo
#endif
